更新 .gitmodules 文件中的 arceos 子模块 URL，添加 axdriver-dyn 依赖到 Cargo.toml，更新 Makefile 以支持动态特性，修改 main.rs 以引入 axdriver_dyn

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "arceos"]
 	path = arceos
-	url = https://github.com/Starry-OS/arceos
+	url = https://github.com/arceos-hypervisor/arceos
 	branch = dev-starry-hv
 [submodule "crates/axcpu"]
 	path = crates/axcpu
