新增 axdriver-dyn 子模块并更新 .gitmodules 文件

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "crates/axdriver_crates"]
 	path = crates/axdriver_crates
 	url = https://github.com/Starry-OS/axdriver_crates
+[submodule "crates/axdriver-dyn"]
+	path = crates/axdriver-dyn
+	url = https://github.com/drivercraft/axdriver-dyn
