新增 rknpu 依赖，更新相关模块和实现，优化日志输出

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,10 @@ starry-vm = "0.2"
 starry-core = { path = "./core" }
 starry-api = { path = "./api" }
 
+rdrive = "0.18"
+
+rknpu = { git = "https://github.com/drivercraft/rknpu" }
+
 [package]
 name = "starry"
 version.workspace = true
