更新设置，添加 gpt_disk_io 依赖，调整 Makefile 中 aarch64-build 目标的日志级别

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "rust-analyzer.cargo.target": "aarch64-unknown-none-softfloat",
   
   "rust-analyzer.cargo.allTargets": false,
-  "rust-analyzer.cargo.features": ["qemu", "pci"]
+  "rust-analyzer.cargo.features": ["qemu", "pci", "dyn"]
 }
